# hala-trans

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: CONTRIBUTING.md  windows_environment_settings.md
halatrans/: base.py  global_instance.py  gunicorn_config.py  test_db_chunks.py  utils.py  web.py
halatrans/config/: config.py
halatrans/model/: message.py  services.py
halatrans/services/: assistant_service.py  audio_stream_service.py  backend_manager.py  base_service.py  base_service_manager.py  config.py  demo_service_example.py  frontend_manager.py  interface.py  manager.py  process_task_manager.py  rts2t_service.py  service_backend_manager.py  service_frontend_manager.py  service_template.py  storage_service.py  transcribe_service.py  translation_service.py  utils.py  whisper_service.py
halatrans/services/backend/: assistant_service.py  rts2t_service.py  storage_service.py  transcribe_service.py  translation_service.py  whisper_service.py
halatrans/services/frontend/: audio_device_service.py  audio_stream_service.py
halatrans/services/rts2t/: transcribe_service.py  whisper_service.py
halatrans/services/translation/: __init__.py
halatrans/utils/: device.py
halatrans/web/: backend.py  frontend.py
halatrans/worker/: worker.py
webui/: package-lock.json
webui/app/: config-overrides.js  package-lock.json  package.json  tsconfig.json
webui/app/src/: App.css  App.tsx  index.tsx
webui/app/src/app/: store.ts
webui/app/src/containers/: home.tsx
webui/app/src/hooks/: useCustomHook.ts
webui/app/src/services/: api.ts
(+27 files in other folders)
